--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
   "homepage": "https://github.com/Muambas-net/projeto-muamba#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
+    "path": "^0.12.7",
+    "sequelize": "^6.21.3",
+    "sequelize-cli": "^6.4.1",
     "uuid": "^8.3.2"
   }
 }
