--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 module.exports = {
     config: path.resolve(__dirname,'config','../config/config.js'),
-    "migrations-path": path.resolve(__dirname,'data','migrations'),
-    "seeders-path": path.resolve(__dirname,'data','seeders'),
+    "migrations-path": path.resolve(__dirname,'database','migrations'),
+    "seeders-path": path.resolve(__dirname,'database','seeders'),
     "models-path": path.resolve( __dirname,'models'),
 };
